--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -15,34 +15,34 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DiaLy"
+            android:name=".activities.DiaLy"
             android:label="@string/dialy" />
         <activity
-            android:name=".ToanHoc"
+            android:name=".activities.ToanHoc"
             android:label="@string/toanhoc" />
         <activity
-            android:name=".AnhVan"
+            android:name=".activities.AnhVan"
             android:label="@string/anhvan" />
         <activity
-            android:name=".NguVan"
+            android:name=".activities.NguVan"
             android:label="@string/nguvan" />
         <activity
-            android:name=".HoaHoc"
+            android:name=".activities.HoaHoc"
             android:label="@string/hoahoc" />
         <activity
-            android:name=".VatLy"
+            android:name=".activities.VatLy"
             android:label="@string/vatly" />
         <activity
-            android:name=".LichSu"
+            android:name=".activities.LichSu"
             android:label="@string/lichsu" />
         <activity
-            android:name=".SinhHoc"
+            android:name=".activities.SinhHoc"
             android:label="@string/sinhhoc" />
         <activity
-            android:name="leftmenu.QuyCheThi"
+            android:name=".fragment.QuyCheThi"
             android:label="@string/quychethi" />
         <activity
-            android:name="leftmenu.HuongDanSuDung"
+            android:name=".fragment.HuongDanSuDung"
             android:label="@string/hdsd"/>
     </application>
 
