--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
     <application
         android:name=".utils.interfaces.ApplicationName"
         android:allowBackup="true"
-        android:icon="@drawable/avatar"
+        android:icon="@drawable/thpt_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
